# tweets-to-topic-network

./: .env.example  .gitattributes  .gitignore  LICENSE  Makefile  README.md  changelog.md  pyproject.toml  requirements.txt
data/: sample.json  toy.json  toy_users.json
data/cache/: tweets_toy.csv  tweets_toy.pkl  tweets_toy_topics.pkl  users_toy.csv  users_toy.pkl
data/networks/: test_test.gml  toy_quotes.gml  toy_reply_ml.gml  toy_retweets.gml  toy_retweets_ml.gml  toy_test.gml  toy_test_ml.gml  toyquotes.gml  toyreply.gml  toyretweets.gml
data/networks/projected/: test__prj_1.0.gml  test__prj_2.0.gml  toy_reply_prj_-1.0.gml  toy_retweets_prj_-1.0.gml  toy_test_prj_1.0.gml  toy_test_prj_2.0.gml
plots/: network_visualization.html
src/: 00_data.py  01_topics.py  02_network.py  data.py  integrity.py  longitudinal.py  main.py  network.py  pol.py  report.ipynb  retweet_network.py  stats.py  test.json  test.py  topic_representation.py  topics.py  toy_example.py  tweets_to_network.py  utils.py
src/DataProcessor/: data_processor.py
src/analysis/: ideology.py  influential.py  report.ipynb
src/data/networks/: test_retweet.gml  test_ttt.gml  testretweet_ml.gml
src/networkCreator/: network_creator.py
src/networks/: _retweet_network.gml
src/others/: main2.py  old_report.ipynb  report.ipynb  report.py  retweet_network.py  stats.py  test.py  topics.py  toy_example.py  understand_latent_ideology.py
src/topicModeler/: topic_modeler.py
src/zothers/: longitudinal.py  main2.py  quadrant.py  topic12cop2x.py
test/: arvis_tm.py  main.py  merge.py  test.py  tweets_to_network.py
test/arvis_hpc/: README.md  arvis_tm.py  recipe.def  requirements.txt
test/networks/: test_retweet.gml  test_retweet_network_ml.gml  testretweet_ml.gml
test/networks/projected/: test__prj_2.0.gml
test_networks/: test_ttt.gml
test_networks/projected/: test__prj_1.0.gml
tweets_to_topic_network/: data.py  data_processor.py  network_creator.py  topic.py
