[tool.poetry]
name = "tweets-to-topic-network"
version = "0.1.0"
description = "internship at uppsala university"
authors = ["alessiogandelli <alessiogandelli99@gmail.com>"]
readme = "README.md"
packages = [{include = "tweets_to_topic_network"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
requests = "2.29.0"
appnope = "0.1.3"
asttokens = "2.2.1"
attrs = "23.1.0"
backcall = "0.2.0"
bertopic = "0.14.1"
certifi = "2022.12.7"
charset-normalizer = "3.1.0"
click = "8.1.3"
comm = "0.1.3"
contourpy = "1.0.7"
cycler = "0.11.0"
cython = "0.29.34"
debugpy = "1.6.7"
decorator = "5.1.1"
executing = "1.2.0"
filelock = "3.12.0"
fonttools = "4.39.3"
fsspec = "2023.4.0"
huggingface-hub = "0.14.1"
idna = "3.4"
importlib-metadata = "6.6.0"
importlib-resources = "5.12.0"
jedi = "0.18.2"
jinja2 = "3.1.2"
joblib = "1.2.0"
jsonlines = "3.1.0"
kiwisolver = "1.4.4"
llvmlite = "0.39.1"
markupsafe = "2.1.2"
matplotlib = "3.7.1"
matplotlib-inline = "0.1.6"
mpmath = "1.3.0"
nest-asyncio = "1.5.6"
networkx = "3.1"
nltk = "3.8.1"
numba = "0.56.4"
numpy = "1.23.5"
packaging = "^23.2"
pandas = "2.0.1"
parso = "0.8.3"
pexpect = "4.8.0"
pickleshare = "0.7.5"
pillow = "9.5.0"
platformdirs = "3.4.0"
plotly = "5.14.1"
prompt-toolkit = "3.0.38"
psutil = "5.9.5"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
pygments = "2.15.1"
pynndescent = "0.5.10"
pyparsing = "3.0.9"
python-dateutil = "2.8.2"
python-dotenv = "1.0.0"
pytz = "2023.3"
pyyaml = "6.0"
pyzmq = "25.0.2"
regex = "2023.3.23"
scikit-learn = "1.2.2"
scipy = "1.10.1"
sentence-transformers = "2.2.2"
sentencepiece = "0.1.98"
six = "1.16.0"
stack-data = "0.6.2"
sympy = "1.11.1"
tenacity = "8.2.2"
threadpoolctl = "3.1.0"
tokenizers = "0.13.3"
torch = "2.0.0"
torchvision = "0.15.1"
tornado = "6.3.1"
tqdm = "4.65.0"
traitlets = "5.9.0"
transformers = "4.28.1"
typing-extensions = "4.5.0"
tzdata = "2023.3"
umap-learn = "0.5.3"
uunet = "1.1.4"
urllib3 = "1.26.15"
wcwidth = "0.2.6"
zipp = "3.15.0"
igraph = "0.10.4"
ipykernel = "^6.24.0"
openai = "^0.27.8"
seaborn = "^0.12.2"
latent-ideology = "^0.0.8.2"
diptest = "^0.5.2"
python-louvain = "^0.16"
hdbscan = "^0.8.33"
qdrant-client = "^1.8.2"
langchain = "^0.1.14"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
